# VINS-Mono

./: .gitignore
ar_demo/: CMakeLists.txt
benchmark_publisher/: CMakeLists.txt
camera_model/: CMakeLists.txt
camera_model/include/camodocal/calib/: CameraCalibration.h
camera_model/include/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
camera_model/include/camodocal/chessboard/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h  Spline.h
camera_model/include/camodocal/gpl/: EigenQuaternionParameterization.h  gpl.h
camera_model/include/camodocal/sparse_graph/: Transform.h
camera_model/src/: intrinsic_calib.cc
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
camera_model/src/chessboard/: Chessboard.cc
camera_model/src/gpl/: EigenQuaternionParameterization.cc  gpl.cc
camera_model/src/sparse_graph/: Transform.cc
config/euroc/: euroc_config.yaml
config/realsense/: realsense_color_config.yaml  realsense_fisheye_config.yaml
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h  tic_toc.h
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: euroc_no_extrinsic_param.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  (+6 more)
(+4 files in other folders)
